--- a/index.html
+++ b/index.html
@@ -3,6 +3,21 @@
     <head>
         <meta charset="utf-8">
         <title>Rock Paper Scissors</title>
-        <script src="java.js"></script>
+        <link rel='stylesheet' href="style.css">
+        <script src="java.js" defer></script>
     </head>
+    <body>
+        <div id="buttons">
+            <button id="rock">ROCK</button>
+            <button id="paper">PAPER</button>
+            <button id="scissors">SCISSORS</button>
+        </div>
+        
+        <div id="results">
+ 
+        </div>
+        <div id="endresult">
+                
+        </div>
+    </body>
 </html>
